@@ -5,9 +5,12 @@ The points listed with a '+' indicate potential sub-projects (contributions will
 
 General
 
+- add the import symbols in compat15 (Environment, etc) - in sys.modules
+
 - cannot configure a project in a subdirectory
 - fix the target installation system → create one installation task like the link_task? store several installation targets in it?
 - autoconfig for any kind of command
+
 - give the pkg-config binary path
 - global module repository to avoid re-doing "import"
 - refactor the environment thing
@@ -21,6 +24,7 @@ General
 
 Ideas
 
+- how to enable different scripting systems?
 - provide Program, Shlib, Staticlib functions?
 - bind declare chain to the build context and to individual functions
 - build context generalization to tasks and task generators?
